--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<h2>Student and Researcher</h2>
 									<p>Graduated from ZJUI institute, Zhejiang University and currently is a PhD student in University of Illinois, Urbana Champaign. I am interested in enginnering thermophysics.</p>
 									<ul class="actions">
-										<li><a href="Student.html" class="button">Learn more</a></li>
+										<li><a href="student.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
