--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Welcome!</h1>
 							<p>This is the personal website of Yiyang Chen,<br />
-							a PhD student from <a href="https://www.zju.edu.cn">Zhejiang University</a> and <a href="https://illinois.edu">Universit of Illinois, Urbana Champaign</a>, <br /> 
+							a PhD student from <a href="https://www.zju.edu.cn/english">Zhejiang University</a> and <a href="https://illinois.edu">Universit of Illinois, Urbana Champaign</a>, <br /> 
 							major in <a href="https://mechse.illinois.edu">Mechanical Engineering</a>, <br />
 							fan of <a href="https://www.chelseafc.com/en">Chelsea Football Club</a>. </p>
 							<ul class="actions">
