--- a/index.html
+++ b/index.html
@@ -6,206 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Personal Website of Yiyang Chen</title>
+		<title>别偷看我/title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#resume">Who I am</a></li>
-							<li><a href="#work">What I do</a></li>
-							<li><a href="#communication">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Welcome!</h1>
-							<p>This is the personal website of Yiyang Chen,<br />
-							a PhD student from <a href="https://www.zju.edu.cn/english">Zhejiang University</a> and <a href="https://illinois.edu">Universit of Illinois, Urbana Champaign</a>, <br /> 
-							major in <a href="https://mechse.illinois.edu">Mechanical Engineering</a>, <br />
-							fan of <a href="https://www.chelseafc.com/en">Chelsea Football Club</a>. </p>
-							<ul class="actions">
-								<li><a href="#resume" class="button scrolly">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="resume" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/zjui.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Student and Researcher</h2>
-									<p>Graduated from ZJUI institute, Zhejiang University and currently is a PhD student in University of Illinois, Urbana Champaign. I am interested in enginnering thermophysics.</p>
-									<ul class="actions">
-										<li><a href="student.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/havertz.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Fans and Gamer</h2>
-									<p>Knowing a little bit about soccer, basketball, table tennis, badminton, snooker, chess and other sports. Love video games, Louis Cha and Franz Kafka.</p>
-									<ul class="actions">
-										<li><a href="fans.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/avatar.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>What else can I write?</h2>
-									<p>Subsequent development never ends. You can offer advice to this bored person.</p>
-									<ul class="actions">
-										<li><a href="anyelse.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="work" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What I do</h2>
-							<p>The following includes something I am working on and will be developing in the future.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Developing applications related to thermal engineering physics</h3>
-									<p>Heat transfer and fluids flow are the most profound secrets of traditional mechanics, and this is the main direction of my studies.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Expanding research methods from experimental to numerical simulation and theory</h3>
-									<p>In the past, I conducted scientific research mainly through experiments, and I am combining numerical simulation and theory with it.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>VPN construction</h3>
-									<p>"睁眼看世界"</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Creating a P2P file transfer system under public network</h3>
-									<p>Commercial network drives are too expensive and I don't want to send them money.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Finding a girlfriend</h3>
-									<p>ahahahahahah :)</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Eating and sleeping</h3>
-									<p>If you know where to get good food in Champaign and Hangzhou, please let me know!</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="doing.html" class="button">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="communication" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>If you wish to reach me, please contact me via email and let me know your purpose.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="mailto:yiyangc5@illinois.edu" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>University of Illinois at Urbana Champaign<br />
-											Urbana<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<span>yiyangc5@illinois.edu</span>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(86) 136****1640</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="https://mobile.twitter.com/Scolitas0428" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-												<li><a href="https://github.com/Scolitas" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-												<li><a href="https://www.linkedin.cn/incareer/in/yiyang-chen-2799931b9" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Scolitas. All rights reserved.</li><li>Design: Yiyang and also thanks for "HTML5 UP"</li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+	
 </html>
